<resources>
    <string name="app_name">SchoolERP</string>
    <string name="base_url">http://erp.sparsematrix.co.in/SchoolERP/admin/</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_studentclass">StudentClass</string>
    <string name="menu_class">Class</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="menu_subject">Subject</string>


</resources>