<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.esparse_matrix.schoolerp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.esparse_matrix.schoolerp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.esparse_matrix.schoolerp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />


    <fragment
        android:id="@+id/nav_subject"
        android:name="com.esparse_matrix.schoolerp.ui.subject.Subject"
        android:label="@string/menu_subject"
        tools:layout="@layout/subject_fragment" />


    <activity
        android:id="@+id/nav_class"
        android:name="com.esparse_matrix.schoolerp.ui.studentclass.StudentClass"
        android:label="@string/menu_studentclass"
        tools:layout="@layout/activity_student_class"
    />

</navigation>